# ChangeLog for net-libs/nodejs
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/nodejs/ChangeLog,v 1.143 2015/05/11 03:46:33 patrick Exp $

*nodejs-0.10.38 (11 May 2015)
*nodejs-0.12.2-r2 (11 May 2015)

  11 May 2015; Patrick Lauer <patrick@gentoo.org> +nodejs-0.10.38.ebuild,
  +nodejs-0.12.2-r2.ebuild:
  Bump

*nodejs-0.12.2-r1 (11 Apr 2015)

  11 Apr 2015; Michał Górny <mgorny@gentoo.org> +nodejs-0.12.2-r1.ebuild,
  -nodejs-0.12.2.ebuild:
  Bump dependency on libuv due to runtime failures, bug #545618.
  https://github.com/gentoo/gentoo-portage-rsync-mirror/pull/92 by Matthew
  Dawson.

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> nodejs-0.10.30.ebuild,
  nodejs-0.10.36.ebuild, nodejs-0.12.0.ebuild, nodejs-0.12.1.ebuild,
  nodejs-0.12.2.ebuild:
  Drop old Python implementations

*nodejs-0.12.2 (02 Apr 2015)

  02 Apr 2015; Patrick Lauer <patrick@gentoo.org> +nodejs-0.12.2.ebuild:
  Bump

*nodejs-0.12.1 (26 Mar 2015)

  26 Mar 2015; Patrick Lauer <patrick@gentoo.org> +nodejs-0.12.1.ebuild:
  Bump

  23 Mar 2015; Patrick Lauer <patrick@gentoo.org> -nodejs-0.10.31.ebuild,
  -nodejs-0.10.32.ebuild, -nodejs-0.10.33.ebuild, -nodejs-0.10.35.ebuild,
  -nodejs-0.11.12.ebuild, -nodejs-0.11.13-r1.ebuild, -nodejs-0.11.13.ebuild,
  -nodejs-0.11.14.ebuild, -nodejs-0.11.15.ebuild:
  Remove old

  08 Mar 2015; Kacper Kowalik <xarthisius@gentoo.org> nodejs-0.12.0.ebuild:
  Libraries that are linked to executable belong to both RDEP and DEP

  15 Feb 2015; Patrick Lauer <patrick@gentoo.org> nodejs-0.12.0.ebuild:
  Force openssl sanity #540106

*nodejs-0.12.0 (07 Feb 2015)

  07 Feb 2015; Patrick Lauer <patrick@gentoo.org> +nodejs-0.12.0.ebuild:
  Bump

*nodejs-0.10.36 (30 Jan 2015)

  30 Jan 2015; Patrick Lauer <patrick@gentoo.org> +nodejs-0.10.36.ebuild:
  Bump

*nodejs-0.11.15 (23 Jan 2015)

  23 Jan 2015; Patrick Lauer <patrick@gentoo.org> +nodejs-0.11.15.ebuild: