@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX nodejs-v8-3.5.patch 440 SHA256 e27140ed4fb2d9db928c8a8138b53461eea352261265f9953c821ca15dfdd91f SHA512 9652a8dd423a3a067822e830f5b01667780c69232e4827c02a92ccc42049418efa65aaa6abe0fe301c968b7d016816d5fda08641fd7022dcde5620870aadecd7 WHIRLPOOL ce6dd29ea6c20eeabd239d65fd1154d7ac0cb83a0b71af733526b258ec43d81a16878480e54cb69e1e8afbc46405c352b590861f8ba347cb0516bf2f027652b4
 DIST node-v0.10.30.tar.gz 13527922 SHA256 3dfcbd307f5f5f266ef174e1443107da853cd3d0aa0b2493a44235d5908625d2 SHA512 7d82eba5bab8b0ac67f6773a03f650dee67bf42fe3b0b2cc5ca581e00170c000a63e0f7ba966ce31e6f2202af7b1179c44b138932f55df39f85b48389097c240 WHIRLPOOL 71a34e115d604669974677d05ac201bc23a495e5e60944bb1f62659d3c1c2a3d689c8a0650a94a6ca0531bb9a5bd9b0c411d52e472cfafedf0709dc872d6db93
 DIST node-v0.10.36.tar.gz 14410899 SHA256 b9d7d1d0294bce46686b13a05da6fc5b1e7743b597544aa888e8e64a9f178c81 SHA512 353fe6df45f5c2b94f432f320e0e51385819c5e2c77ddabe0e0072d1163e37ebefdb59005c71444ce0b7a74d0e30d19830e9c4fcc470fdee25acbc33429fe4c3 WHIRLPOOL 59f2b4d0dca7dcae9fa6240e576405484ff6e4f85d1b7814ba872dfcb83a8826c939b1be7b5430503451ec0dbd6ee7572f0bd1d597ee282af66224ec23cf1390
@@ -12,7 +15,26 @@ EBUILD nodejs-0.10.38.ebuild 1865 SHA256 65f0203d6d21f56d2e16d7fd2d2579fe86613f0
 EBUILD nodejs-0.12.0.ebuild 2167 SHA256 6d78fac439d8b83487c6e3b83d454ba72dab1988796c01a3d7bbe54403f1a4fa SHA512 93929ed01efa3cba443e837b4dc38c3c9a9fd8b64b3fa7b5a03224e279dc71ddd8740e90a058cab9ddca9637234f1f5ba089a9f1dfd0a20ae2aa25572acd7ee7 WHIRLPOOL 74311c94d114d73f0aa898d8df0bea90372e7dd02b072f7197b57b5e72df11dac8ef89f9f836d98e9bf21d1e57a159d0c37f105ea9fc6acb5d92cada31efad68
 EBUILD nodejs-0.12.1.ebuild 2167 SHA256 95c3afe82bc562d0081b7fa4cddad9d4494d7e3ac80555bd39a8d382285406e2 SHA512 62363046728af9f30f80b8bf44465ee1b095c24224b65e1820af2802522831bf4d49c4666de9e6da1bbfcc259f0cebadbc7f2143992e810634aaeb270fc6d03c WHIRLPOOL 96dc1410a92b255fc7dc9fdd55058e5ce6d6cdc5d2aa6ade65be39fdf89eff0cb1b85b38b52c97a579f902de29a021ad3518ad6a956e98ee43b183dc1eb05fe4
 EBUILD nodejs-0.12.2-r1.ebuild 2173 SHA256 598b5d007486d8fe6a476be0df2166599a7e3f6d27a3c35c4b19832ba09f3fb7 SHA512 d28dcf33eb51620755bae600202a1cc12a7dd055d11c15f0dbed9087a1d623c0fa24cac45a47c9e6d7d577465c8f06ac5e194e9516b116e97f5cc536b79eaf12 WHIRLPOOL c0581a4ee728a98aee74f719efbf3fd566a7b2d6d70d620f3d6b9797427afe26159373bd5654fd1f5095b5336f286c1569809df68679d2e91eebeeeca08a4de2
-EBUILD nodejs-0.12.2-r2.ebuild 3121 SHA256 b39d266f4f21a65dd6819b1f9126236438d8a85dcb23bb71042bb659c6a3982c SHA512 6565417f315dd979fccb5debfa5e0118369a73bce156bd723e2003ddfbe28f5b0bf3ec31f64e0f5a256ec473196f1df40df2b308534c551111b25567be70292e WHIRLPOOL 206c4aa40ccc457ae0f8de9aea42b76a3d73076ffe20efa573e92613625b8c692ed3996451a789921eb1189b22697434e36503999a144b54dbe747ac5d16ed0f
+EBUILD nodejs-0.12.2-r3.ebuild 3139 SHA256 7a98f3e42e4209fc74f8ca2055873379b5595129d2c3b5b40e3e8038cc1b16a2 SHA512 dcda71577da785d4b2031411b0cfc3cedf242cb1ba540cae9ef4d4e98b82c3804770c3b9864a49a545f06194ed07f97380f11e0a7f3b2a6edb27740d2c8dd830 WHIRLPOOL ed96332355c786aa00a28cc034913d43fa4a7d79e9a22c9339e2ace6b5a8a0564e415f5ecdbe528c9f22dc9c1f677617b48a22f32afb97426a099664e30bb33d
 EBUILD nodejs-0.8.28.ebuild 2171 SHA256 a4e7c5f01b512fe25ccbe9d26001cf25125f8ec76ded0614e4c59d88b16bd845 SHA512 2be6a37150842a6f0b52a0ee29c7dbfbe9dca2c67affd21bee81a06a80436affba87d55b0e29009ca16979a373bdc6d773e6c786198edaebf8763717e33e7ac5 WHIRLPOOL 3cfb10d5c0e3e2ebebb3cd2ecf34365be2e7ffd3d5cf87d49ba654de9097b681fcb613fccacdba8f303dc72bc072353345f4e45ed5ac60582b7076664d8fefcf
-MISC ChangeLog 22384 SHA256 a3c78496461fb7e8ed17d11ada201b8b4fb062af123fc0169608de329250f633 SHA512 15f03bc59b23244e71aa685b071334a084dc859a8d0eead7ab77112aa31112ee1fe66360c3cc6283206840f8968c1f84b56eb9b6c4a3fbdd18298d09fdf171de WHIRLPOOL f5da609af9d269b0b6124a5b5f6025976b9361cffb0204a667dacbc9602a36785165148f6f5c803f67dbf8913d297ed6470065ef1f0e37282418b4ed1044a356
+MISC ChangeLog 22638 SHA256 67f04e6332ace7e8b566acfdaf15263f9d90875fd6a8301fe55a5e4e7c254cc8 SHA512 4370984cec841bc764c06545796c650a150019cded4ed5f09af8d2d678515e9216ba2e3667eb8844f63777ac660c24ef40ca3f62ec1df1b9daca3245807cbdcc WHIRLPOOL 4ed80965e539ba83948abbf61b259f0530aab0458da1d32180d1ab2ec470565f8edbe9b4b691e9d96674fb899a04d1e2cd2a7ef5320b211d27ad467f149c590a
 MISC metadata.xml 545 SHA256 ea98b41b3fe8288a7b38649098871f33c897916aaa34c718f8b849bc35d15c12 SHA512 f32b1eced5dada7827c10bb7b59986400d8dce58dc8c2c0b03d3acd0886b539d2c0afa7956c8a0d1b1ae1894eae31c520368c524bd4c7fb5930180fc8bc4b035 WHIRLPOOL f3fe5d3c70386787eae1cc856f7a57d775738096777074b50678f45ed7e5c9c2575c21a452e75d9a5d06245c85c17434593a7b3d0b5f0c4ec932fd3c7a8b84aa
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJVVBmwXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOqNMP/Aw54F5ESzHaQPfltAKO0yL1
+uChWmJ0aJcKL1L+jCnk8GPxP325t13x8tULevenvT0LT+RxyoMK1WqKC51SsixYp
+KTrc848pA5kT5dcck2GbI/bpQNA4ZT61s+RCDOB3NPgHpgHT4h7ay/f8jk1+h4iF
+YnUU9HaDddhKEwtECCop4Sn7Dm0Ybny0EkpXIAjLOAMDWdHXqkVNUEPdnG7pzW68
+6CPAi2F4Wt5tuz8zSqkysBzg1YziOgPJqkDVMfrUc74KwygoowOSYkm7lTgSMaqs
+w/b+H0vOg4Dhl+QdBMbdxgtImkKe8xJyGmNyc5BPV5Xfy7w0LFDFWbXU7V8vNRKb
+LsZHSVgMR3e1tDjj5fwRZy7vLkd+bntsnn5JfD/O1vl3seiJ4i3YAQDaGuf9M1lB
+Dzb5TraqOX1dWPFILCsXQdbmxoNrTs+PeHBC9ykVUWSaZrRacrAHL4Hfsq26Wizy
+rxmiEuo/qrjUHrwwFVzOiP90LRgz+AxEvrZvw3AaRUfDOW6DeV1+Z1r31RO5geLq
+ON//75opuncX/TbEzkNPdBPphUx8yHTtN6gyP+UjMjT5ykOaGLOaqGowMCt9oG16
+7hIYTPQmu3jBbR04ISffs9AU/7YdDlp6V6T0JTzQgq+rmyTjmXuDh10bFAxWvVUF
+5L6D2r6KggjUP1WgbEm5
+=pq5+
+-----END PGP SIGNATURE-----
